# test-proj

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile.in  README.txt
include/: fibonacci.h  primeFactorization.h
includes/: fibonacci.h  gcd.h
src/: fibonacci.cpp  gcd.cpp  main.cpp  primeFactorization.cpp
test/: CMakeLists.txt  fibonacciTest.cpp  gcdTest.cpp  primeFactorizationTest.cpp
